# mindnest

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  需求.md
src/: App.css  App.tsx  index.css  main.tsx  types.ts  功能描述.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs
src/components/DatabaseTest/: index.tsx  styles.module.css
src/components/Layout/: index.tsx  styles.module.css
src/components/tailwind/: advanced-editor.tsx  extensions.ts  slash-command.tsx
src/components/tailwind/generative/: generative-menu-switch.tsx
src/components/tailwind/selectors/: color-selector.tsx  link-selector.tsx  math-selector.tsx  node-selector.tsx  text-buttons.tsx
src/components/tailwind/ui/: command.tsx
src/controllers/: BaseController.ts  NoteController.ts  TagController.ts
src/lib/: content.ts
src/models/: BaseModel.ts  Note.ts  Tag.ts
src/pages/Editor/: index.tsx  styles.module.css
src/pages/Home/: index.tsx  styles.module.css
src/pages/NoteEditor/: index.tsx  styles.module.css
src/pages/NotePreview/: index.tsx  styles.module.css
src/pages/Settings/: index.tsx  styles.module.css
src/styles/: variables.css
src/types/: index.ts
src/utils/: DatabaseManager.ts  db.ts
