[package]
name = "mindnest"
version = "0.0.0"
description = "A Tauri App"
authors = ["kenny"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
